recursion.lessons.recursion.koch.Koch.scala.error
Koch:15: error: illegal start of simple expression
		var div = 3^levels;
                ^